...
      />
      <Tab.Screen
        name="SectorMap"
        component={SectorMapScreen}
        options={{
          tabBarLabel: 'Sectors',
          tabBarButtonTestID: 'sectors-tab',
          tabBarIcon: ({ color }) => <SectorsIcon size={20} color={color} />,
        }}
      />
      <Tab.Screen
        name="Codex"
        component={CodexScreen}
...
      />
      <Tab.Screen
        name="Settings"
        component={SettingsScreen}
        options={{
          tabBarLabel: 'Engineer',
          tabBarButtonTestID: 'engineer-tab',
          tabBarIcon: ({ color }) => <EngineerIcon size={20} color={color} />,
        }}
      />
    </Tab.Navigator>
  );
}
...
